--- a/EntityFrameworkDemo/EntityFrameworkDemo/App.config
+++ b/EntityFrameworkDemo/EntityFrameworkDemo/App.config
@@ -9,7 +9,7 @@
   </startup>
   <connectionStrings>
     <!--<add name="Hr" connectionString="Data Source=(local)\Econs;Initial Catalog=Personal;User ID=sa;Password=1234%asd; Persist Security Info=True;" providerName="System.Data.SqlClient" />-->
-    <add name="Hr" connectionString="Data Source=CLAUDIU-PC\SQLEXPRESS; Initial Catalog=Hr; Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Hr" connectionString="Data Source=DESKTOP-ME3JJGQ\SQLEXPRESS; Initial Catalog=Hr; Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
